# nyvia-dst-project

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: devops-bootstrap.yml
prompts/sections/: 00_metadata_resumen.md
src/dst_factory/: cli.py  config.py
src/dst_factory/drive/: auth.py  client.py
src/dst_factory/dst/: assembler.py  generator.py  section.py  section_generator.py
src/dst_factory/llm/: client_factory.py  gemini_client.py  openai_client.py
src/dst_factory/sources/: extractor.py  models.py
